Footer CSS Changes

--- a/resources/assets/sass/_variables.scss
+++ b/resources/assets/sass/_variables.scss
@@ -5,6 +5,7 @@
 
 // Brands
 $dgl-primary: #8381F7;
+$dgl-darkpuple: #313152;
 $dgl-gray: #5E5E6B;
 $dgl-lightgray: #CECEEB;
 $dgl-lightergray: #EEEBFA;
