--- a/resources/assets/sass/_variables.scss
+++ b/resources/assets/sass/_variables.scss
@@ -12,7 +12,7 @@ $dgl-lightergray: #EEEBFA;
 $dgl-darkergray: #2F2F36;
 
 // Typography
-$font-header: "Titillium Web", sans-serif;
+$font-primary: "Titillium Web", sans-serif;
 
 
 // Panels
