--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -10,18 +10,72 @@
   color: $dgl-primary;
 }
 
+.font-primary-700b{
+  font-family: $font-primary;
+  font-weight: 700;
+}
+.font-primary-700bi{
+  font-family: $font-primary;
+  font-weight: 700;
+  font-style: italic;
+  //padding-bottom: 5px;
+}
+
 .faded{
   opacity: .3;
 }
+//Bootstrap overrides.
+.white-border{
+  border-color: #FFF !important;
+}
+
+.lightgray-border{
+  border-color: #CECEEB !important;
+}
+
 // Componenets
 body{
 
-  .regular{
-    font-family: $font-header;
-    font-weight: 700;
-    font-style: italic;
-    padding-bottom: 5px;
+  #alertBannerTop{
+    background-color: $dgl-primary;
   }
+  .navbar{ // bootstrap override
+    padding: 0 !important;
+  }
+
+  .navbar-dgl-background{
+    background-color: $dgl-gray;
+  }
+
+  .navbar-dgl{
+    .navbar-toggler-icon{
+    background-image: url('/storage/hamburger.svg')
+    }
+    a{
+      color: $dgl-lightgray;
+      font-family: $font-primary;
+      font-weight: 700;
+
+      &:hover{
+        color: #FFF;
+        background-color: $dgl-primary;
+      }
+
+      button{ //bootstrap override
+        color: #FFF;
+        border-color: #FFF !important;
+      }
+    }
+
+    li{
+      a{
+        padding-right: 1vw !important;
+        padding-left: 1vw !important;
+      }
+    }
+  }
+
+
 
   .top-banner{
     background-color: $dgl-primary;
@@ -38,25 +92,13 @@ body{
     width : 100%;
     padding-bottom: 10px;
     padding-top: 10px;
+    min-width: 75px;
+    max-width: 100px;
   }
 
   .title-row{
     background-color: $dgl-lightergray;
   }
-  .main-menu{
-    background-color: $dgl-gray;
-    a {
-      color: $dgl-lightgray;
-      font-family: $font-header;
-      font-weight: 700;
-
-      &:hover{
-        color: #FFF;
-        background-color: $dgl-primary;
-      }
-    }
-  }
-
   .banner-background{
     background-color: $dgl-darkergray;
   }
@@ -65,16 +107,16 @@ body{
     border-top: 15px solid $dgl-primary;
     margin-top: 2em;
     padding-top: 2em;
-    font-family: $font-header;
+    font-family: $font-primary;
 
     a{
       color: #5E5E6B;
-      font-family: $font-header;
+      font-family: $font-primary;
       font-weight: 700;
       text-decoration: none;
     }
-    h2, h5 {
-      font-family: $font-header;
+    h2, h3, h5 {
+      font-family: $font-primary;
       font-weight: 700;
       line-height: 1em;
 
