--- a/resources/assets/sass/_variables.scss
+++ b/resources/assets/sass/_variables.scss
@@ -6,13 +6,22 @@
 // Brands
 $dgl-primary: #8381F7;
 $dgl-darkpuple: #313152;
+$dgl-orange: #EB893C;
+
+$dgl-lightestgray: #F7F6F8;
+$dgl-lightergray: #F7F7F7;
+$dgl-lightgray: #EAEAEB;
 $dgl-gray: #5E5E6B;
-$dgl-lightgray: #CECEEB;
-$dgl-lightergray: #EEEBFA;
-$dgl-darkergray: #2F2F36;
+$dgl-grayple: #5E5E6B;
+$dgl-darkgray: #6B6B6B;
+$dgl-darkish-gray: #363636;
+$dgl-darkergray: #262626;
+
+
+
 
 // Typography
 $font-primary: "Titillium Web", sans-serif;
-
+$font-copy: "Open Sans", "Helvetica", "Arial";
 
 // Panels
