--- a/resources/assets/sass/_variables.scss
+++ b/resources/assets/sass/_variables.scss
@@ -4,18 +4,25 @@
 // Borders
 
 // Brands
-$dgl-primary: #8381F7;
+$dgl-primary: #EF9F3C;
 $dgl-darkpuple: #313152;
 $dgl-orange: #EB893C;
 
-$dgl-lightestgray: #F7F6F8;
-$dgl-lightergray: #F7F7F7;
+$dgl-lightestgray: #DBE2EB;
+$dgl-lightergray: #B6B9BD;
 $dgl-lightgray: #EAEAEB;
-$dgl-gray: #5E5E6B;
-$dgl-grayple: #5E5E6B;
-$dgl-darkgray: #6B6B6B;
+$dgl-gray: #454545;
+$dgl-grayple: #454545;
 $dgl-darkish-gray: #363636;
-$dgl-darkergray: #262626;
+$dgl-darkgray: #2B2B2A;
+$dgl-darkergray: #262625;
+
+$dgl-accent-1: #6954E3;
+$dgl-accent-2: #FF386D;
+$dgl-action: #00A0EA;
+//$dgl-bluegray-1: #DBE2EB;
+//$dgl-bluegray-2: #;
+$dgl-btn-color : $dgl-lightergray;
 
 
 
