--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -9,9 +9,60 @@
   color: $dgl-primary;
 }
 
+.font-darken-primary{
+  color: darken($dgl-primary, 5%);
+}
+
+.font-gray{
+  color: $dgl-gray;
+}
+
+.font-white{
+  color: #FFF;
+}
+
+.font-blue{
+  color: $dgl-action;
+}
+
+.font-green-color{
+  color: saturate(lighten(#00A560, 20%), 2%);
+}
+
+.font-red-color{
+  color: saturate(lighten(#EE3728, 12%), 20%);
+}
+
+.font-alternate-color{
+  color: saturate(lighten($dgl-orange, 10%),50%);
+}
 .back-color-primary{
-  //background-color: darken($dgl-primary, 5%);
   background-color: $dgl-primary;
+}
+
+.back-color-darkgray{
+  background-color: $dgl-darkgray;
+}
+
+.back-color-lightgray{
+  background-color: $dgl-lightgray;
+}
+
+.back-color-lightergray{
+  background-color: $dgl-lightergray;
+}
+
+.back-color-primary-grad{
+  background-image: radial-gradient(circle,$dgl-primary 0%,darken($dgl-primary, 15%) 100%);
+}
+.back-color-accent1-grad{
+  background-image: radial-gradient(circle,$dgl-accent-1 0%,darken($dgl-accent-1, 20%) 100%);
+
+}
+
+.back-color-accent2-grad{
+  background-image: radial-gradient(circle,$dgl-accent-2 50%,darken($dgl-accent-2, 10%) 100%);
+
 }
 
 .back-color-orange{
@@ -32,6 +83,27 @@
   }
 }
 
+.background-tournament{
+  background:
+          linear-gradient(
+            //rgba(239, 159, 60, 0.60),
+                          rgba(8,3,37,.7),
+                          rgba(8,3,37,.7)
+          ),
+          url('/storage/hearthstone.jpg');
+  background-size: cover;
+  z-index: -2;
+}
+.overlay {
+  z-index: -1;
+  height: 100%;
+  width: 100%;
+  position: fixed;
+  overflow: hidden;
+  top: 0px;
+  left: 0px;
+  background: rgba(0, 0, 0, 0.7); /*can be anything, of course*/
+}
 
 h1, h2, h3, h5 {
   font-family: $font-primary;
@@ -42,29 +114,20 @@ h1, h2, h3, h5 {
 
 p {
   font-family: $font-copy;
+  color: #FFF;
   //font-size: 18px;
 }
 
 .jumbotron-fluid{
-  //background-repeat: no-repeat;
-  //background-size: 100% 100%;
-  //style="background-image: url('{{URL::asset('storage/hearthstone.jpg')}}');"
   position: relative;
   overflow: hidden;
   padding: auto;
-  //min-height: 50vh;
-  z-index: -4;
-  //img {
-  //  position: absolute;
-  //  //left: 50%;
-  //  //top: 100%;
-  //  z-index: -3;
-  //  width: 100%;
-  //  height: auto;
-  //  //-webkit-transform: translate(-50%,-50%);
-  //  //-ms-transform: translate(-50%,-50%);
-  //  //transform: translate(-50%,-50%);
-  //}
+  z-index: 1;
+  color: #FFF;
+  padding-bottom: 3em;
+  h1{
+    font-weight: 900;
+  }
 }
 .card { //set a back color
 
@@ -131,6 +194,13 @@ p {
   min-height: 100px;
 }
 
+.thumbnail-sq-lg {
+  width: 24vw;
+  height: 24vw;
+  min-width: 100px;
+  min-height: 100px;
+}
+
 .thumbnail-rect {
   width: 20vw;
   height: 15vw;
@@ -139,7 +209,7 @@ p {
   max-height: 225px;
 }
 
-.thumbnail-rect-smscreen {
+.thumbnail-rect-smscreen { // takes up more of the screen
   width: 86vw;
   height: 50vw;
   margin-left: auto;
@@ -153,6 +223,10 @@ p {
 
 .lightgray-border{
   border-color: #CECEEB !important;
+}
+
+.carousel-indicators li{
+  transform: skewX(-20deg);
 }
 
 // Componenets
@@ -175,8 +249,74 @@ body{
       text-decoration: none;
     }
   }
+
+  .slide-link{
+    text-decoration: none;
+
+    h1{
+      color: #FFF;
+
+      &:hover{
+        color: $dgl-primary;
+      }
+    }
+  }
+  .btn-dgl-contaianer{
+    padding: 0;
+    background-color: transparent;
+    display: inline-block;
+    transform: skewX(-10deg);
+    //border-radius : 7px;
+    border: 3px solid $dgl-action;
+
+    &:hover{
+      //color: #fff;
+      background-color: $dgl-action;
+      border-color: $dgl-action;
+
+      .btn-dgl{
+        color: #FFF !important;
+      }
+    }
+  }
+
+  .btn-dgl-container-gray{
+    border: 3px solid $dgl-gray;
+
+    &:hover{
+      border: 3px solid $dgl-gray;
+      background-color: $dgl-gray;
+      .btn-dgl{
+        color: #FFF !important;
+      }
+    }
+    .btn-dgl{
+      color: $dgl-gray !important;
+    }
+  }
+
+  .btn-dgl{
+    color: $dgl-action;
+    border-width: 0;
+    transform: skewX(10deg);
+    font-family: $font-primary;
+    font-weight: bold;
+    &:hover{
+      color: #FFF;
+    }
+    &:focus{
+      box-shadow: 0 0 0 0.2rem rgba(0,123,255,.5);
+    }
+    &:active{
+      color: #fff;
+      background-color: darken(saturate($dgl-primary, 15%),4%);
+      //border-color: #005cbf;
+    }
+  }
   .navbar{ // bootstrap override
     padding: 0 !important;
+    //background: linear-gradient($dgl-darkgray , $dgl-primary);
+    background-color: $dgl-darkergray;
   }
 
   .nav-brand{
@@ -195,16 +335,29 @@ body{
     .navbar-toggler-icon{
     background-image: url('/storage/hamburger.svg')
     }
+
     a{
-      color: $dgl-lightergray;
+      color: #FFF;
       font-family: $font-primary;
       font-weight: 700;
-
+      text-decoration: none;
+    }
+    .nav-item{
+      //&:hover{
+      //  //color: $dgl-action;
+      //  //background-color: $dgl-primary;
+      //  border-bottom: 5px solid $dgl-primary;
+      //}
+    }
+    a.nav-link{
+      border-bottom: 5px solid transparent;
       &:hover{
-        color: #FFF;
-        background-color: $dgl-primary;
+        //color: $dgl-action;
+        //background-color: $dgl-primary;
+        border-bottom: 5px solid $dgl-primary;
       }
     }
+
     button{ //bootstrap override
       color: #FFF;
       border-color: $dgl-lightgray !important;
@@ -228,9 +381,7 @@ body{
     font-weight: 700;
   }
 
-  .footer-banner-img{
-    opacity: .7;
-  }
+
 
   .title-banner-img-container{
     width : 50%;
@@ -254,19 +405,12 @@ body{
   }
 
   .main{
-    //background: linear-gradient($dgl-gray, $dgl-lightergray);
-    ///background: linear-gradient(#FFF, #9696AB);
-    background-color: $dgl-lightestgray;//lighten($dgl-darkergray, 65%);
+    background-color: $dgl-darkgray;//$dgl-lightestgray;//lighten($dgl-darkergray, 65%);
   }
-
   .post-body{
     padding-bottom: 1em;
-    //border : 1px dashed $dgl-orange;
-    //border-bottom-width: .45vw;
-    //border-bottom-style: solid;
-    //border-bottom-color : $dgl-orange;
 
-    background-color: #FFF;
+    background-color: transparent;
     .post-link {
       text-decoration: none;
       .post-title {
@@ -274,22 +418,25 @@ body{
         color: $dgl-gray;
         text-decoration: none;
         margin-top : 5px;
-        &:hover {
-          color: $dgl-orange;
-
-        }
+        //&:hover {
+        //  color: $dgl-orange;
+        //
+        //}
       }
     }
+  }
 
+  .post-body-hover{
     &:hover{
-      //box-shadow: 5px 5px $dgl-primary;
       box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+      background-color: $dgl-primary;
+      cursor: pointer;
+
     }
   }
   .footer {
     background-color: $dgl-darkergray;
-    background: linear-gradient($dgl-darkish-gray , $dgl-darkergray);
-   // border-top: 2px dashed $dgl-primary;
+    //background: linear-gradient($dgl-darkgray , $dgl-darkergray);
 
     padding-top: 2em;
     padding-bottom : 20px;
@@ -310,14 +457,8 @@ body{
 
       height: 25vw;
 
-
-
       .footer-list-div{
-        //float : left;
-        //display: inline;
         min-width : 175px;
-        //border : 1px solid black;
-        //margin-top : 1em;
       }
 
     }
@@ -334,5 +475,8 @@ body{
     max-height : 300px;
     border-bottom : 1px solid $dgl-darkish-gray;
 
+  }
+  .footer-banner-img{
+    opacity: .7;
   }
 }
