--- a/resources/assets/sass/_variables.scss
+++ b/resources/assets/sass/_variables.scss
@@ -8,11 +8,12 @@ $dgl-primary: #EF9F3C;
 $dgl-darkpuple: #313152;
 $dgl-orange: #EB893C;
 
+$dgl-purple : rgba(92,96,168,1.0);//#605CA8;
 $dgl-lightestgray: #DBE2EB;
 $dgl-lightergray: #B6B9BD;
 $dgl-lightgray: #EAEAEB;
 $dgl-gray: #454545;
-$dgl-grayple: #454545;
+$dgl-grayple: darken(rgb(8,3,37), 2%);
 $dgl-darkish-gray: #363636;
 $dgl-darkgray: #2B2B2A;
 $dgl-darkergray: #262625;
